@@ -20,7 +20,14 @@ package org.apache.struts2.components;
 
 import com.opensymphony.xwork2.inject.Inject;
 import com.opensymphony.xwork2.util.ValueStack;
-
+import jakarta.servlet.RequestDispatcher;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletOutputStream;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.WriteListener;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponseWrapper;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.struts2.RequestUtils;
@@ -30,18 +37,17 @@ import org.apache.struts2.util.FastByteArrayOutputStream;
 import org.apache.struts2.views.annotations.StrutsTag;
 import org.apache.struts2.views.annotations.StrutsTagAttribute;
 
-import jakarta.servlet.RequestDispatcher;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.ServletOutputStream;
-import jakarta.servlet.ServletRequest;
-import jakarta.servlet.WriteListener;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpServletResponseWrapper;
-
-import java.io.*;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
+import java.io.Writer;
 import java.net.URLEncoder;
-import java.util.*;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Stack;
+import java.util.StringTokenizer;
 
 /**
  * <!-- START SNIPPET: javadoc -->
@@ -97,8 +103,8 @@ public class Include extends Component {
     private static final String systemEncoding = System.getProperty("file.encoding");
 
     protected String value;
-    private HttpServletRequest req;
-    private HttpServletResponse res;
+    private final HttpServletRequest req;
+    private final HttpServletResponse res;
     private String defaultEncoding;       // Made non-static (during WW-4971 fix)
     private boolean useResponseEncoding = true;  // Added with WW-4971 fix (allows switch between usage of response or default encoding)
 
@@ -125,7 +131,7 @@ public class Include extends Component {
 
         if (useResponseEncoding) {
             encodingForInclude = res.getCharacterEncoding();  // Use response (page) encoding
-            if (encodingForInclude == null || encodingForInclude.length() == 0) {
+            if (encodingForInclude == null || encodingForInclude.isEmpty()) {
                 encodingForInclude = defaultEncoding;  // Revert to defaultEncoding when response (page) encoding is invalid
             }
         }
@@ -137,7 +143,7 @@ public class Include extends Component {
         urlBuf.append(page);
 
         // Add request parameters
-        if (parameters.size() > 0) {
+        if (!parameters.isEmpty()) {
             urlBuf.append('?');
 
             String concat = "";
@@ -153,11 +159,7 @@ public class Include extends Component {
                     urlBuf.append(name);
                     urlBuf.append('=');
 
-                    try {
-                        urlBuf.append(URLEncoder.encode(value.toString(), "UTF-8"));
-                    } catch (UnsupportedEncodingException e) {
-                        LOG.warn("Unable to url-encode {}, it will be ignored", value);
-                    }
+                    urlBuf.append(URLEncoder.encode(value.toString(), StandardCharsets.UTF_8));
 
                     concat = "&";
                 }
@@ -186,10 +188,9 @@ public class Include extends Component {
 
         if (relativePath.startsWith("/")) {
             returnValue = relativePath;
-        } else if (!(request instanceof HttpServletRequest)) {
+        } else if (!(request instanceof HttpServletRequest hrequest)) {
             returnValue = relativePath;
         } else {
-            HttpServletRequest hrequest = (HttpServletRequest) request;
             String uri = (String) request.getAttribute("jakarta.servlet.include.servlet_path");
 
             if (uri == null) {
@@ -291,7 +292,7 @@ public class Include extends Component {
      */
     static final class PageOutputStream extends ServletOutputStream {
 
-        private FastByteArrayOutputStream buffer;
+        private final FastByteArrayOutputStream buffer;
 
 
         public PageOutputStream() {
@@ -321,22 +322,27 @@ public class Include extends Component {
             return buffer;
         }
 
+        @Override
         public void close() throws IOException {
             buffer.close();
         }
 
+        @Override
         public void flush() throws IOException {
             buffer.flush();
         }
 
+        @Override
         public void write(byte[] b, int o, int l) throws IOException {
             buffer.write(b, o, l);
         }
 
+        @Override
         public void write(int i) throws IOException {
             buffer.write(i);
         }
 
+        @Override
         public void write(byte[] b) throws IOException {
             buffer.write(b);
         }
@@ -363,8 +369,7 @@ public class Include extends Component {
      */
     static final class PageResponse extends HttpServletResponseWrapper {
 
-        protected PrintWriter pagePrintWriter;
-        protected ServletOutputStream outputStream;
+        private PrintWriter pagePrintWriter;
         private PageOutputStream pageOutputStream = null;
 
 
@@ -374,7 +379,6 @@ public class Include extends Component {
         public PageResponse(HttpServletResponse response) {
             super(response);
         }
-
 
         /**
          * Return the content buffered inside the {@link PageOutputStream}.
@@ -397,6 +401,7 @@ public class Include extends Component {
          * Return instance of {@link PageOutputStream}
          * allowing all data written to stream to be stored in temporary buffer.
          */
+        @Override
         public ServletOutputStream getOutputStream() throws IOException {
             if (pageOutputStream == null) {
                 pageOutputStream = new PageOutputStream();
@@ -408,6 +413,7 @@ public class Include extends Component {
         /**
          * Return PrintWriter wrapper around PageOutputStream.
          */
+        @Override
         public PrintWriter getWriter() throws IOException {
             if (pagePrintWriter == null) {
                 pagePrintWriter = new PrintWriter(new OutputStreamWriter(getOutputStream(), getCharacterEncoding()));
